mytube configure added

--- a/configure.ac
+++ b/configure.ac
@@ -49,6 +49,9 @@ Extensions/nStreamVOD/img/playlist/Makefile
 Extensions/nStreamVOD/Moduls/Makefile
 Extensions/1channel/Makefile
 Extensions/MyTube/Makefile
+Extensions/MyTube/meta/Makefile
+Extensions/MyTube/src/Makefile
+Extensions/MyTube/po/Makefile
 Extensions/PermanentTimeshift/Makefile
 Extensions/PermanentTimeshift/images/Makefile
 Extensions/PermanentTimeshift/locale/Makefile
