--- a/configure.ac
+++ b/configure.ac
@@ -65,4 +65,6 @@ Extensions/PermanentTimeshift/locale/ru/Makefile
 Extensions/PermanentTimeshift/locale/ru/LC_MESSAGES/Makefile
 Extensions/PermanentTimeshift/locale/sk/Makefile
 Extensions/PermanentTimeshift/locale/sk/LC_MESSAGES/Makefile
+Extensions/PPanel/Makefile
+Extensions/PPanel/data/Makefile
 ])
