--- a/Extensions/CoolTVGuide/Components/Makefile.am
+++ b/Extensions/CoolTVGuide/Components/Makefile.am
@@ -1,4 +1,4 @@
-installdir = $(pkglibdir)/python/Components/Renderer
+installdir = $(LIBDIR)/enigma2/python/Components/Renderer
 
 install_PYTHON = \
 				 CoolNextEvent.pyo \
