--- a/configure.ac
+++ b/configure.ac
@@ -48,35 +48,6 @@ Extensions/nStreamVOD/img/Makefile
 Extensions/nStreamVOD/img/playlist/Makefile
 Extensions/nStreamVOD/Moduls/Makefile
 Extensions/1channel/Makefile
-Extensions/CoolTVGuide/Makefile
-Extensions/CoolTVGuide/Components/Makefile
-Extensions/CoolTVGuide/Components/Renderer/Makefile
-Extensions/CoolTVGuide/Cool3D/Makefile
-Extensions/CoolTVGuide/Cool3D/Menu/Makefile
-Extensions/CoolTVGuide/Cool3D/MyDesign/Makefile
-Extensions/CoolTVGuide/Cool3D/Standard/Makefile
-Extensions/CoolTVGuide/CoolSkin/Makefile
-Extensions/CoolTVGuide/locale/Makefile
-Extensions/CoolTVGuide/locale/bg/Makefile
-Extensions/CoolTVGuide/locale/bg/LC_MESSAGES/Makefile
-Extensions/CoolTVGuide/locale/cs/Makefile
-Extensions/CoolTVGuide/locale/cs/LC_MESSAGES/Makefile
-Extensions/CoolTVGuide/locale/de/Makefile
-Extensions/CoolTVGuide/locale/de/LC_MESSAGES/Makefile
-Extensions/CoolTVGuide/locale/fa/Makefile
-Extensions/CoolTVGuide/locale/fa/LC_MESSAGES/Makefile
-Extensions/CoolTVGuide/locale/fr/Makefile
-Extensions/CoolTVGuide/locale/fr/LC_MESSAGES/Makefile
-Extensions/CoolTVGuide/locale/it/Makefile
-Extensions/CoolTVGuide/locale/it/LC_MESSAGES/Makefile
-Extensions/CoolTVGuide/locale/nl/Makefile
-Extensions/CoolTVGuide/locale/nl/LC_MESSAGES/Makefile
-Extensions/CoolTVGuide/locale/no/Makefile
-Extensions/CoolTVGuide/locale/no/LC_MESSAGES/Makefile
-Extensions/CoolTVGuide/locale/pl/Makefile
-Extensions/CoolTVGuide/locale/pl/LC_MESSAGES/Makefile
-Extensions/CoolTVGuide/locale/sk/Makefile
-Extensions/CoolTVGuide/locale/sk/LC_MESSAGES/Makefile
 Extensions/MyTube/Makefile
 Extensions/MyTube/meta/Makefile
 Extensions/MyTube/src/Makefile
@@ -97,4 +68,33 @@ Extensions/PermanentTimeshift/locale/sk/LC_MESSAGES/Makefile
 Extensions/PPanel/Makefile
 Extensions/PPanel/data/Makefile
 ])
+#Extensions/CoolTVGuide/Makefile
+#Extensions/CoolTVGuide/Components/Makefile
+#Extensions/CoolTVGuide/Components/Renderer/Makefile
+#Extensions/CoolTVGuide/Cool3D/Makefile
+#Extensions/CoolTVGuide/Cool3D/Menu/Makefile
+#Extensions/CoolTVGuide/Cool3D/MyDesign/Makefile
+#Extensions/CoolTVGuide/Cool3D/Standard/Makefile
+#Extensions/CoolTVGuide/CoolSkin/Makefile
+#Extensions/CoolTVGuide/locale/Makefile
+#Extensions/CoolTVGuide/locale/bg/Makefile
+#Extensions/CoolTVGuide/locale/bg/LC_MESSAGES/Makefile
+#Extensions/CoolTVGuide/locale/cs/Makefile
+#Extensions/CoolTVGuide/locale/cs/LC_MESSAGES/Makefile
+#Extensions/CoolTVGuide/locale/de/Makefile
+#Extensions/CoolTVGuide/locale/de/LC_MESSAGES/Makefile
+#Extensions/CoolTVGuide/locale/fa/Makefile
+#Extensions/CoolTVGuide/locale/fa/LC_MESSAGES/Makefile
+#Extensions/CoolTVGuide/locale/fr/Makefile
+#Extensions/CoolTVGuide/locale/fr/LC_MESSAGES/Makefile
+#Extensions/CoolTVGuide/locale/it/Makefile
+#Extensions/CoolTVGuide/locale/it/LC_MESSAGES/Makefile
+#Extensions/CoolTVGuide/locale/nl/Makefile
+#Extensions/CoolTVGuide/locale/nl/LC_MESSAGES/Makefile
+#Extensions/CoolTVGuide/locale/no/Makefile
+#Extensions/CoolTVGuide/locale/no/LC_MESSAGES/Makefile
+#Extensions/CoolTVGuide/locale/pl/Makefile
+#Extensions/CoolTVGuide/locale/pl/LC_MESSAGES/Makefile
+#Extensions/CoolTVGuide/locale/sk/Makefile
+#Extensions/CoolTVGuide/locale/sk/LC_MESSAGES/Makefile
 
