Permanent Timeshift new version upload. 	modified:   Extensions/PermanentTimeshift/createapscfiles 	modified:   Extensions/PermanentTimeshift/eitsave.so 	modified:   Extensions/PermanentTimeshift/images/Makefile.am 	new file:   Extensions/PermanentTimeshift/images/icon/Makefile.am 	new file:   Extensions/PermanentTimeshift/images/icon/ts.png 	new file:   Extensions/PermanentTimeshift/images/icon/ts1.png 	new file:   Extensions/PermanentTimeshift/images/icon/ts2.png 	new file:   Extensions/PermanentTimeshift/images/icon/ts3.png 	new file:   Extensions/PermanentTimeshift/images/icon/ts4.png 	new file:   Extensions/PermanentTimeshift/images/now/Makefile.am 	new file:   Extensions/PermanentTimeshift/images/now/button_grey200.png 	new file:   Extensions/PermanentTimeshift/images/now/pts_bar.png 	new file:   Extensions/PermanentTimeshift/images/now/slider.png 	new file:   Extensions/PermanentTimeshift/images/now/slider_back.png 	new file:   Extensions/PermanentTimeshift/images/now/timelines_new.png 	modified:   Extensions/PermanentTimeshift/keymap.xml 	modified:   Extensions/PermanentTimeshift/locale/Makefile.am 	new file:   Extensions/PermanentTimeshift/locale/PermanentTimeshift.pot 	modified:   Extensions/PermanentTimeshift/locale/ru/LC_MESSAGES/PermanentTimeshift.mo 	modified:   Extensions/PermanentTimeshift/plugin.py 	modified:   configure.ac

--- a/Extensions/PermanentTimeshift/images/Makefile.am
+++ b/Extensions/PermanentTimeshift/images/Makefile.am
@@ -1,5 +1,7 @@
 installdir = $(LIBDIR)/enigma2/python/Plugins/Extensions/PermanentTimeshift/images
 
+SUBDIR = icon now
+
 install_DATA = \
 			   slider.png \
 			   slider_back.png  \
