--- a/Extensions/PermanentTimeshift/locale/Makefile.am
+++ b/Extensions/PermanentTimeshift/locale/Makefile.am
@@ -1,3 +1,5 @@
 installdir = $(LIBDIR)/enimga2/python/Plugins/Extensions/PermanentTimeshift/locale
 
 SUBDIRS = de it pl ru sk 
+
+install_DATA = PermanentTimeshift.pot 
